--- a/PetHome MVC Front/PetHome MVC Front.csproj
+++ b/PetHome MVC Front/PetHome MVC Front.csproj
@@ -18,4 +18,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Account\" />
+    <Folder Include="Views\Account\" />
+  </ItemGroup>
+
 </Project>
